added user routes and controllers
